# encIDE

src/: CMakeLists.txt  encIDEApp.cpp  encIDEApp.h  encIDEMain.cpp  encIDEMain.h  icon.xpm
